[gd_scene load_steps=47 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Statemachine/Jump.gd" type="Script" id=2]
[ext_resource path="res://Statemachine/Idle.gd" type="Script" id=3]
[ext_resource path="res://Statemachine/Move.gd" type="Script" id=4]
[ext_resource path="res://Statemachine/Coyote.gd" type="Script" id=5]
[ext_resource path="res://Statemachine/Falling.gd" type="Script" id=6]
[ext_resource path="res://Statemachine/StateMachine.gd" type="Script" id=7]
[ext_resource path="res://Assets/Biker_idle.png" type="Texture" id=8]
[ext_resource path="res://Assets/Biker_attack1.png" type="Texture" id=9]
[ext_resource path="res://Assets/Biker_jump.png" type="Texture" id=10]
[ext_resource path="res://Assets/Biker_death.png" type="Texture" id=11]
[ext_resource path="res://Assets/Biker_run.png" type="Texture" id=12]
[ext_resource path="res://Statemachine/Dead.gd" type="Script" id=13]
[ext_resource path="res://Statemachine/Attack.gd" type="Script" id=14]

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 32, 48 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 9 )
region = Rect2( 32, 0, 32, 48 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 9 )
region = Rect2( 64, 0, 32, 48 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 9 )
region = Rect2( 96, 0, 32, 48 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 9 )
region = Rect2( 128, 0, 32, 48 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 9 )
region = Rect2( 160, 0, 32, 48 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 36, 48 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 11 )
region = Rect2( 36, 0, 36, 48 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 11 )
region = Rect2( 72, 0, 36, 48 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 11 )
region = Rect2( 108, 0, 36, 48 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 11 )
region = Rect2( 144, 0, 36, 48 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 11 )
region = Rect2( 180, 0, 36, 48 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 10 )
region = Rect2( 64, 0, 32, 48 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 10 )
region = Rect2( 96, 0, 32, 48 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 32, 48 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 8 )
region = Rect2( 32, 0, 32, 48 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 8 )
region = Rect2( 64, 0, 32, 48 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 8 )
region = Rect2( 96, 0, 32, 48 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 32, 48 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 10 )
region = Rect2( 32, 0, 32, 48 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 12 )
region = Rect2( 0, 0, 32, 48 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 12 )
region = Rect2( 32, 0, 32, 48 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 12 )
region = Rect2( 64, 0, 32, 48 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 12 )
region = Rect2( 96, 0, 32, 48 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 12 )
region = Rect2( 128, 0, 32, 48 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 12 )
region = Rect2( 160, 0, 32, 48 )

[sub_resource type="SpriteFrames" id=28]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": false,
"name": "Attack",
"speed": 10.0
}, {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": false,
"name": "Dead",
"speed": 10.0
}, {
"frames": [ SubResource( 14 ), SubResource( 15 ) ],
"loop": false,
"name": "Faliing",
"speed": 5.0
}, {
"frames": [ SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 20 ), SubResource( 21 ) ],
"loop": false,
"name": "Jumping",
"speed": 5.0
}, {
"frames": [ SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ) ],
"loop": true,
"name": "Moving",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 9.75, 17 )

[sub_resource type="Animation" id=29]
resource_name = "Flash"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=30]
resource_name = "Hurt"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=31]
resource_name = "Normal"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=32]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[node name="Player" type="KinematicBody2D"]
modulate = Color( 1, 1, 1, 0 )
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 28 )
animation = "Attack"
frame = 5
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -2.75, 7 )
shape = SubResource( 1 )

[node name="Attack" type="RayCast2D" parent="."]
position = Vector2( 0, 7 )
enabled = true
cast_to = Vector2( 25, 0 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 7 )

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 3 )

[node name="Moving" type="Node" parent="StateMachine"]
script = ExtResource( 4 )

[node name="Jumping" type="Node" parent="StateMachine"]
script = ExtResource( 2 )

[node name="Falling" type="Node" parent="StateMachine"]
script = ExtResource( 6 )

[node name="Coyote" type="Node" parent="StateMachine"]
script = ExtResource( 5 )

[node name="Timer" type="Timer" parent="StateMachine/Coyote"]
one_shot = true

[node name="Dead" type="Node" parent="StateMachine"]
script = ExtResource( 13 )

[node name="Attack" type="Node" parent="StateMachine"]
script = ExtResource( 14 )

[node name="Timer" type="Timer" parent="StateMachine/Attack"]
wait_time = 0.3

[node name="Invincible" type="Timer" parent="."]
wait_time = 0.9
one_shot = true

[node name="Effects" type="AnimationPlayer" parent="."]
autoplay = "Normal"
anims/Flash = SubResource( 29 )
anims/Hurt = SubResource( 30 )
anims/Normal = SubResource( 31 )
anims/RESET = SubResource( 32 )

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="StateMachine/Coyote/Timer" to="StateMachine/Coyote" method="_on_Timer_timeout"]
[connection signal="timeout" from="StateMachine/Attack/Timer" to="StateMachine/Attack" method="_on_Timer_timeout"]
[connection signal="timeout" from="Invincible" to="." method="_on_Invincible_timeout"]
